--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chakra-ui/layout": "^2.1.6",
+    "@chakra-ui/react": "^2.3.2",
     "@emotion/react": "11.5.0",
     "@emotion/styled": "11.3.0",
     "@material-ui/core": "4.12.3",
